Bug 44991 - lpc_ich: Resource conflict(s) found affecting iTCO_wdt
Summary: lpc_ich: Resource conflict(s) found affecting iTCO_wdt
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: acpi_other
URL:
Keywords:
: 45391 45851 45871 77371 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-07-21 08:52 UTC by dino99
Modified: 2017-02-02 12:04 UTC (History)
21 users (show)

See Also:
Kernel Version: 3.5.0-5
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Dmesg output from 3.4.6 (working) (52.50 KB, text/plain)
2012-08-10 21:19 UTC, Robert Richmond
Details
Dmesg output from 3.5.0 (broken) (55.32 KB, text/plain)
2012-08-10 21:19 UTC, Robert Richmond
Details
all need info + broken dmesg on 3.5.1 (129.76 KB, application/octet-stream)
2012-08-11 09:04 UTC, Andrey Ovcharov
Details
lpc_ich.patch (1.81 KB, patch)
2012-08-13 09:52 UTC, Feng Tang
Details | Diff
final 3.6 release dmesg (56.53 KB, application/octet-stream)
2012-10-01 05:23 UTC, dino99
Details

Description dino99 2012-07-21 08:52:37 UTC
This is with an Asus P5WDH (ICH7R) on Ubuntu Quantal i386 system

dmesg:

ACPI Warning: 0x00000830-0x00000833 SystemIO conflicts with Region \SMIE 1 (20120320/utaddress-251)
[   15.146991] ACPI Warning: 0x00000830-0x00000833 SystemIO conflicts with Region \_SB_.PCI0.SBRG.SMIE 2 (20120320/utaddress-251)
[   15.146995] ACPI: If an ACPI driver is available for this device, you should use it instead of the native driver
[   15.146997] lpc_ich: Resource conflict(s) found affecting iTCO_wdt
[   15.147005] ACPI Warning: 0x00000480-0x000004bf SystemIO conflicts with Region \_SB_.PCI0.SBRG.GPIO 1 (20120320/utaddress-251)
[   15.147009] ACPI: If an ACPI driver is available for this device, you should use it instead of the native driver
[   15.147010] lpc_ich: Resource conflict(s) found affecting gpio_ich

Previous kernel discussion:
https://lkml.org/lkml/2012/2/7/401

Launchpad report:
https://bugs.launchpad.net/ubuntu/+source/linux/+bug/1027370
Comment 1 Sven Köhler 2012-07-21 23:18:42 UTC
Dell E6410, same problem:
[    7.652359] ACPI Warning: 0x0000000000000460-0x000000000000047f SystemIO conflicts with Region \PMIO 1 (20120320/utaddress-251)
[    7.652370] ACPI: If an ACPI driver is available for this device, you should use it instead of the native driver
[    7.652373] lpc_ich: Resource conflict(s) found affecting iTCO_wdt
[    7.652378] ACPI Warning: 0x0000000000000428-0x000000000000042f SystemIO conflicts with Region \PMIO 1 (20120320/utaddress-251)
[    7.652384] ACPI: If an ACPI driver is available for this device, you should use it instead of the native driver
[    7.652389] ACPI Warning: 0x0000000000000500-0x000000000000057f SystemIO conflicts with Region \GPIO 1 (20120320/utaddress-251)
[    7.652394] ACPI: If an ACPI driver is available for this device, you should use it instead of the native driver
[    7.652396] lpc_ich: Resource conflict(s) found affecting gpio_ich


Is this a misconfiguration of the kernel? Do I need to disable gpio_ich or should I disable lpc_ich? What is "If an ACPI driver is available for this device, you should use it instead of the native driver" trying to tell me?
Comment 2 Tiziano Müller 2012-07-25 15:07:09 UTC
Same here, on a Lenovo W510 using a slightly (only framebuffer-decoration) patched 3.5.0

[    3.601048] ACPI Warning: 0x0000000000001060-0x000000000000107f SystemIO conflicts with Region \_SB_.PCI0.LPC_.PMIO 1 (20120320/utaddress-251)
[    3.601058] ACPI: If an ACPI driver is available for this device, you should use it instead of the native driver
[    3.601060] lpc_ich: Resource conflict(s) found affecting iTCO_wdt
[    3.601068] ACPI Warning: 0x0000000000001028-0x000000000000102f SystemIO conflicts with Region \_SB_.PCI0.LPC_.PMIO 1 (20120320/utaddress-251)
[    3.601075] ACPI: If an ACPI driver is available for this device, you should use it instead of the native driver
[    3.601084] ACPI Warning: 0x0000000000001180-0x00000000000011ff SystemIO conflicts with Region \_SB_.PCI0.LPC_.LPIO 1 (20120320/utaddress-251)
[    3.601090] ACPI: If an ACPI driver is available for this device, you should use it instead of the native driver
[    3.601093] lpc_ich: Resource conflict(s) found affecting gpio_ich
Comment 3 Thomas Bächler 2012-08-01 19:55:25 UTC
I have the same problem on a Toshiba Tecra and on an Asus mainboard. The result is that iTCO_wdt is no longer loaded. If I load it manually, /dev/watchdog is not created and thus the watchdog doesn't work.

Contrary to the bug details above, this is a regression.
Comment 4 Andrea Oliveri 2012-08-09 17:17:36 UTC
(In reply to comment #2)
> Same here, on a Lenovo W510 using a slightly (only framebuffer-decoration)
> patched 3.5.0
> 
> [    3.601048] ACPI Warning: 0x0000000000001060-0x000000000000107f SystemIO
> conflicts with Region \_SB_.PCI0.LPC_.PMIO 1 (20120320/utaddress-251)
> [    3.601058] ACPI: If an ACPI driver is available for this device, you
> should
> use it instead of the native driver
> [    3.601060] lpc_ich: Resource conflict(s) found affecting iTCO_wdt
> [    3.601068] ACPI Warning: 0x0000000000001028-0x000000000000102f SystemIO
> conflicts with Region \_SB_.PCI0.LPC_.PMIO 1 (20120320/utaddress-251)
> [    3.601075] ACPI: If an ACPI driver is available for this device, you
> should
> use it instead of the native driver
> [    3.601084] ACPI Warning: 0x0000000000001180-0x00000000000011ff SystemIO
> conflicts with Region \_SB_.PCI0.LPC_.LPIO 1 (20120320/utaddress-251)
> [    3.601090] ACPI: If an ACPI driver is available for this device, you
> should
> use it instead of the native driver
> [    3.601093] lpc_ich: Resource conflict(s) found affecting gpio_ich

I have the same result on ThinkPad T430 with latest stable release of kernel (3.5) on fedora 17 and latest bios release
Comment 5 Robert Richmond 2012-08-10 21:18:13 UTC
3.5.0 is fairly broken for me. In addition to getting the same messages about resource conflicts affecting iTCO_wdt, a bit later I get a segfault in kernel space. And then alsa doesn't init snd_hda making my sound hardware unavailable. Reverting to 3.4.6 fixes it. I'm not sure if all these problems are interrelated. Attaching dmesg output.
Comment 6 Robert Richmond 2012-08-10 21:19:10 UTC
Created attachment 77301 [details]
Dmesg output from 3.4.6 (working)

Working kernel's dmesg output. Notice lack of "Resource conflict(s)" message
and general protection fault.
Comment 7 Robert Richmond 2012-08-10 21:19:43 UTC
Created attachment 77311 [details]
Dmesg output from 3.5.0 (broken)

Broken kernel's dmesg output. Notice "Resource conflict(s)" message and general
protection fault. And snd_hda_intel doesn't initialize.
Comment 8 Andrey Ovcharov 2012-08-11 08:51:09 UTC
Same problem on 3.5.0/3.5.1 acer 5730zg

[    0.703643] ACPI Warning: 0x0000000000000460-0x000000000000047f SystemIO conflicts with Region \PMIO 1 (20120320/utaddress-251) 
[    0.703650] ACPI: If an ACPI driver is available for this device, you should use it instead of the native driver 
[    0.703652] lpc_ich: Resource conflict(s) found affecting iTCO_wdt 
[    0.703655] ACPI Warning: 0x0000000000000428-0x000000000000042f SystemIO conflicts with Region \PMIO 1 (20120320/utaddress-251) 
[    0.703660] ACPI: If an ACPI driver is available for this device, you should use it instead of the native driver 
[    0.703663] ACPI Warning: 0x0000000000001180-0x00000000000011bf SystemIO conflicts with Region \GPIO 1 (20120320/utaddress-251) 
[    0.703668] ACPI: If an ACPI driver is available for this device, you should use it instead of the native driver 
[    0.703669] lpc_ich: Resource conflict(s) found affecting gpio_ich
Comment 9 Andrey Ovcharov 2012-08-11 09:04:38 UTC
Created attachment 77321 [details]
all need info + broken dmesg on 3.5.1

all need info + broken dmesg on 3.5.1
Comment 10 Feng Tang 2012-08-13 09:52:17 UTC
Created attachment 77561 [details]
lpc_ich.patch

could you try this patch?
Comment 11 Andrey Ovcharov 2012-08-13 16:07:59 UTC
lpc_ich.patch helps for my. thx!
Comment 12 Reuben Farrelly 2012-08-14 09:49:29 UTC
Works for me too.

This is a diff of old/unpatched vs new/patched from comment #10 dmesg output from my 3.5.1 kernel:

-ACPI Warning: 0x00000000fed1f410-0x00000000fed1f414 SystemMemory conflicts with Region \_SB_.PCI0.SRCR 1 (20120320/utaddress-251)
-ACPI: If an ACPI driver is available for this device, you should use it instead of the native driver
-lpc_ich: Resource conflict(s) found affecting iTCO_wdt
-ACPI Warning: 0x0000000000000500-0x000000000000057f SystemIO conflicts with Region \IGPO 1 (20120320/utaddress-251)
-ACPI: If an ACPI driver is available for this device, you should use it instead of the native driver
-lpc_ich: Resource conflict(s) found affecting gpio_ich
+iTCO_vendor_support: vendor-support=0
+iTCO_wdt: Intel TCO WatchDog Timer Driver v1.07
+iTCO_wdt: Found a Cougar Point TCO device (Version=2, TCOBASE=0x0460)
+iTCO_wdt: initialized. heartbeat=30 sec (nowayout=0)

So the warnings are gone and the device now appears to be detected fine and without any warnings.
Comment 13 Len Brown 2012-08-23 02:24:19 UTC
*** Bug 45851 has been marked as a duplicate of this bug. ***
Comment 14 Len Brown 2012-08-23 02:34:43 UTC
*** Bug 45871 has been marked as a duplicate of this bug. ***
Comment 15 Len Brown 2012-08-23 02:35:49 UTC
*** Bug 45391 has been marked as a duplicate of this bug. ***
Comment 16 Thomas Bächler 2012-08-23 14:46:46 UTC
Link to relevant LKML discussion: https://lkml.org/lkml/2012/8/14/309
Comment 17 Florian Mickler 2012-09-19 22:13:59 UTC
A patch referencing this bug report has been merged in Linux v3.6-rc6:

commit a0e35322910555e20e9eced3f050a76c7b3a1f92
Author: Feng Tang <feng.tang@intel.com>
Date:   Thu Aug 16 15:50:10 2012 +0800

    mfd: lpc_ich: Fix a 3.5 kernel regression for iTCO_wdt driver
Comment 18 dino99 2012-10-01 05:20:36 UTC
final 3.6 release output:

ACPI: Invalid Power Resource to register!

ACPI Warning: 0x00000295-0x00000296 SystemIO conflicts with Region \_SB_.PCI0.SBRG.SIOR.HWRE 1 (20120711/utaddress-251)

ACPI Warning: 0x00000480-0x000004bf SystemIO conflicts with Region \_SB_.PCI0.SBRG.GPIO 1 (20120711/utaddress-251)
lpc_ich: Resource conflict(s) found affecting gpio_ich
Comment 19 dino99 2012-10-01 05:23:34 UTC
Created attachment 81721 [details]
final 3.6 release dmesg
Comment 20 dino99 2012-10-01 06:29:14 UTC
module-init-tools.log:

FATAL: Error inserting w83627ehf (/lib/modules/3.6.0-030600-generic/kernel/drivers/hwmon/w83627ehf.ko): Device or resource busy
Comment 21 Feng Tang 2012-10-02 03:59:38 UTC
commit a0e35322910555e20e9eced3f050a76c7b3a1f92

    mfd: lpc_ich: Fix a 3.5 kernel regression for iTCO_wdt driver

    There are many reports (including 2 of my machines) that iTCO_wdt watchdog
    driver fails to be initialized in 3.5 kernel with error message like:

    [    5.265175] ACPI Warning: 0x00001060-0x0000107f SystemIO conflicts with Region \_SB_.PCI0.LPCB.TCOI 1 (20120320/utaddress-251)
    [    5.265192] ACPI: If an ACPI driver is available for this device, you should use it instead of the native driver
    [    5.265206] lpc_ich: Resource conflict(s) found affecting iTCO_wdt

    The root cause the iTCO_wdt driver in 3.4 probes the HW IO resource from
    LPC's PCI config space, while in 3.5 kernel it relies on lpc_ich driver
    for the probe, which adds a new acpi_check_resource_conflict() check, and
    give up the probe if there is any conflict with ACPI.

    Actually the same check could be removed for the gpio-ich in lpc_ich.c,
    but I'm not sure if it will cause problems.


This is the commit log, as it pointed out, it only fixes the iTCO_wdt problem,
and doesn't touch other warning for "gpio_ich".

If anybody see problem with this "gpio_ich", please create a new bugzilla to 
trace that. thanks,
Comment 22 Guenter Roeck 2012-10-04 17:57:47 UTC
Comment #20 appears to be completely unrelated to the headline of this bug. If there is a problem with the w83627ehf driver, a separate bugzilla entry should be created to track it.
Comment 23 Jean Delvare 2012-10-15 11:44:20 UTC
Closing as this is fixed already. The fix doesn't look safe to me but that's a different story and not really my business anyway.
Comment 24 Feng Tang 2012-10-15 14:30:11 UTC
The fix should be relatively safe :) Here is a quote from some discussion on LKML:

---
On Wed, 22 Aug 2012 22:55:43 +0100
Matthew Garrett <mjg59@srcf.ucam.org> wrote:

> On Wed, Aug 22, 2012 at 09:55:12PM +0200, Wim Van Sebroeck wrote:
>
> > Any idea why the acpi_check_resource_conflict() check gives a conflict?
>
> Because the resource range is declared in ACPI and we assume that that
> means the firmware wants to scribble on it. We'd need the output of
> acpidump to work out whether that's safe or not.

Good point, I checked the conflict for iTCO_wdt, the conflict exists on
almost all the machines I have.

According to ICH (7/8/9 etc)spec, the TCO watchdog has a 32 bytes long IO
space resource, and the bit 9 of TCO1_STS register is "DMISCI_STS", which
 indicates whether a SCI happens, and will be cleared by writing 1
to it. Most of DSDT table will claim a TCO op region only for one bit:
"DMISCI_STS" , as some method may need to access that bit.

I think there is some risk, but it's quite safe as the DMISCI_STS bit has
nothing to do with TCO driver itself, and TCO driver never access it, also
this TCO driver has been there for years, and this resource conflict also
exists for many generations hardware.

Thanks,
Feng
Comment 25 Florian Mickler 2012-10-15 20:47:48 UTC
A patch referencing this bug report has been merged in Linux v3.7-rc1:

commit 092369efbd6ef6b4a215741ce9f65446bf45beff
Author: Feng Tang <feng.tang@intel.com>
Date:   Thu Aug 16 15:50:10 2012 +0800

    mfd: lpc_ich: Fix a 3.5 kernel regression for iTCO_wdt driver
Comment 26 Robert Richmond 2012-10-18 18:51:35 UTC
I originally came to this bug because of a kernel segfault I was receiving during boot, around the time iTCO_wdt was being initialized. It would come up correctly, but the sound hardware would no longer be detected. The last working kernel is 3.4.6, and I'm stuck running it. I still get the same problem in 3.6.1. If I should open a separate bug, let me know.

From 3.4.6:
[   15.712849] iTCO_vendor_support: vendor-support=0
[   15.848964] parport_pc 00:07: reported by Plug and Play ACPI
[   15.849026] parport0: PC-style at 0x378 (0x778), irq 7 [PCSPP,TRISTATE]
[   15.858862] iTCO_wdt: Intel TCO WatchDog Timer Driver v1.07
[   15.858933] iTCO_wdt: Found a ICH7 or ICH7R TCO device (Version=2, TCOBASE=0xf860)
[   15.859177] iTCO_wdt: initialized. heartbeat=30 sec (nowayout=0)
[   15.999353] leds_ss4200: no LED devices found
[   16.347091] ppdev: user-space parallel port driver
[   17.218171] EDAC MC: Ver: 2.1.0
[   17.278506] EDAC MC0: Giving out device to 'i82975x_edac' 'i82975x': DEV 0000:00:00.0
[   22.118973] snd_hda_intel 0000:00:1b.0: irq 45 for MSI/MSI-X
[   22.491165] hda_codec: ALC262: SKU not ready 0x411111f0
[   22.491172] ALSA sound/pci/hda/hda_codec.c:5101 autoconfig: line_outs=1 (0x15/0x0/0x0/0x0/0x0) type:line
[   22.491175] ALSA sound/pci/hda/hda_codec.c:5105    speaker_outs=1 (0x16/0x0/0x0/0x0/0x0)
[   22.491178] ALSA sound/pci/hda/hda_codec.c:5109    hp_outs=1 (0x1b/0x0/0x0/0x0/0x0)
[   22.491180] ALSA sound/pci/hda/hda_codec.c:5110    mono: mono_out=0x0
[   22.491182] ALSA sound/pci/hda/hda_codec.c:5114    inputs:
[   22.491184] ALSA sound/pci/hda/hda_codec.c:5118  Rear Mic=0x18
[   22.491186] ALSA sound/pci/hda/hda_codec.c:5118  Front Mic=0x19
[   22.491188] ALSA sound/pci/hda/hda_codec.c:5118  Line=0x1a
[   22.491190] ALSA sound/pci/hda/hda_codec.c:5118  CD=0x1c
[   22.491192] ALSA sound/pci/hda/hda_codec.c:5118  Aux=0x14
[   22.491194] ALSA sound/pci/hda/hda_codec.c:5120
[   22.493225] ALSA sound/pci/hda/patch_realtek.c:1317 realtek: No valid SSID, checking pincfg 0x411111f0 for NID 0x1d
[   22.493228] ALSA sound/pci/hda/patch_realtek.c:1400 realtek: Enable default setup for auto mode as fallback
[   22.504829] input: HDA Intel Line as /devices/pci0000:00/0000:00:1b.0/sound/card0/input7
[   22.504944] input: HDA Intel Front Mic as /devices/pci0000:00/0000:00:1b.0/sound/card0/input8
[   22.505016] input: HDA Intel Rear Mic as /devices/pci0000:00/0000:00:1b.0/sound/card0/input9
[   22.505099] input: HDA Intel Front Headphone as /devices/pci0000:00/0000:00:1b.0/sound/card0/input10
[   22.505168] input: HDA Intel Line Out as /devices/pci0000:00/0000:00:1b.0/sound/card0/input11


From 3.6.1:
[   16.011433] EDAC MC: Ver: 3.0.0
[   16.160660] parport_pc 00:07: reported by Plug and Play ACPI
[   16.160713] parport0: PC-style at 0x378 (0x778), irq 7 [PCSPP,TRISTATE]
[   16.207798] general protection fault: 0000 [#1] SMP
[   16.207916] Modules linked in: i82975x_edac(+) parport_pc(+) edac_core coretemp parport microcode(+) serio_raw vhost_net nfsd tun macvtap macvlan auth_rpcgss nfs_acl kvm_intel kvm lockd sunrpc binfmt_misc uinput hid_logitech_dj wmi
[   16.208508] CPU 0
[   16.208508] Pid: 389, comm: udevd Not tainted 3.6.1-1.fc17.x86_64 #1 Hewlett-Packard HP xw4400 Workstation/0A68h
[   16.208508] RIP: 0010:[<ffffffff812dffe8>]  [<ffffffff812dffe8>] strncpy+0x18/0x30
[   16.208508] RSP: 0018:ffff88013d275b68  EFLAGS: 00010202
[   16.208508] RAX: ffff8801409bea88 RBX: ffff88013d3d4000 RCX: ffff8801409bea88
[   16.208508] RDX: 000000000000001f RSI: 5f706f5f63616465 RDI: ffff8801409bea88
[   16.208508] RBP: ffff88013d275b68 R08: ffff8801409beaa7 R09: 000000000000fffe
[   16.208508] R10: 0000000000000000 R11: ffffffff81161048 R12: 0000000000000003
[   16.208508] R13: 0000000000000000 R14: ffff8801409be800 R15: ffff88014069f370
[   16.208508] FS:  00007f8c2bc3c840(0000) GS:ffff880147c00000(0000) knlGS:0000000000000000
[   16.208508] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[   16.208508] CR2: 00007f8c2bc6b000 CR3: 000000013d214000 CR4: 00000000000007f0
[   16.208508] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
[   16.208508] DR3: 0000000000000000 DR6: 00000000ffff0ff0 DR7: 0000000000000400
[   16.208508] Process udevd (pid: 389, threadinfo ffff88013d274000, task ffff88013d162e20)
[   16.208508] Stack:
[   16.208508]  ffff88013d275c18 ffffffffa00be6b8 000400003d162e20 ffff88014069f378
[   16.208508]  ffffc90002fa2000 ffff88014069f000 ffff880141bd8000 0000000000000000
[   16.208508]  0000000000000000 0004000000000000 fed140004009d380 0000000000000246
[   16.208508] Call Trace:
[   16.208508]  [<ffffffffa00be6b8>] i82975x_init_one+0x2e6/0x3e6 [i82975x_edac]
[   16.208508]  [<ffffffff81302599>] local_pci_probe+0x79/0x100
[   16.208508]  [<ffffffff81302741>] pci_device_probe+0x121/0x130
[   16.208508]  [<ffffffff813bee4b>] driver_probe_device+0x8b/0x390
[   16.208508]  [<ffffffff813bf1fb>] __driver_attach+0xab/0xb0
[   16.208508]  [<ffffffff813bf150>] ? driver_probe_device+0x390/0x390
[   16.208508]  [<ffffffff813bcee5>] bus_for_each_dev+0x55/0x90
[   16.208508]  [<ffffffff813be7ce>] driver_attach+0x1e/0x20
[   16.208508]  [<ffffffff813be400>] bus_add_driver+0x1a0/0x290
[   16.208508]  [<ffffffffa0006000>] ? 0xffffffffa0005fff
[   16.208508]  [<ffffffffa0006000>] ? 0xffffffffa0005fff
[   16.208508]  [<ffffffff813bf8c7>] driver_register+0x77/0x170
[   16.208508]  [<ffffffffa0006000>] ? 0xffffffffa0005fff
[   16.208508]  [<ffffffff813013be>] __pci_register_driver+0x5e/0xe0
[   16.208508]  [<ffffffffa0006000>] ? 0xffffffffa0005fff
[   16.208508]  [<ffffffffa0006035>] i82975x_init+0x35/0x1000 [i82975x_edac]
[   16.208508]  [<ffffffff8100212a>] do_one_initcall+0x12a/0x180
[   16.208508]  [<ffffffff810be086>] sys_init_module+0x10f6/0x20b0
[   16.208508]  [<ffffffff812f71f0>] ? ddebug_proc_open+0xd0/0xd0
[   16.208508]  [<ffffffff816226e9>] system_call_fastpath+0x16/0x1b
[   16.208508] Code: 84 c9 75 ef 5d c3 66 66 66 66 2e 0f 1f 84 00 00 00 00 00 55 48 85 d2 48 89 f8 4c 8d 04 17 48 89 f9 48 89 e5 74 1a 0f 1f 44 00 00 <0f> b6 16 80 fa 01 88 11 48 83 de ff 48 83 c1 01 4c 39 c1 75 eb
[   16.208508] RIP  [<ffffffff812dffe8>] strncpy+0x18/0x30
[   16.208508]  RSP <ffff88013d275b68>
[   16.213688] ---[ end trace 5387be5a8e88fdad ]---
[   16.313571] ppdev: user-space parallel port driver
[   16.763425] tg3.c:v3.124 (March 21, 2012)
[   16.775664] tg3 0000:3f:00.0: eth0: Tigon3 [partno(BCM95755) rev a002] (PCI Express) MAC address 00:19:bb:42:19:6a
[   16.775764] tg3 0000:3f:00.0: eth0: attached PHY is 5755 (10/100/1000Base-T Ethernet) (WireSpeed[1], EEE[0])
[   16.775862] tg3 0000:3f:00.0: eth0: RXcsums[1] LinkChgREG[0] MIirq[0] ASF[0] TSOcap[1]
[   16.775958] tg3 0000:3f:00.0: eth0: dma_rwctrl[76180000] dma_mask[64-bit]
Comment 27 Jean Delvare 2012-10-21 11:31:12 UTC
Robert, your general protection fault has nothing to do with the bug being discussed here. The problem in your case is with driver i82975x_edac, so you should create a separate bug under Drivers > EDAC. There have been many changes (12 commits) to this driver between kernels v3.4 and v3.6,

Your sound issue also most likely has nothing to do with lpc_ich, so you should open another bug for it, this time under Drivers > Sound(ALSA).

You may try blacklisting driver lpc_ich to completely rule out it being involved in your problems. You can also try blacklisting driver i82975x_edac to see if it makes your sound card come back to life with recent kernels - maybe both issues are related. Blacklisting is achieved by adding e.g. "blacklist lpc_ich" to any file under /etc/modprobe.d/, then reboot, and check with lsmod that the driver was really not loaded.
Comment 28 dino99 2012-10-22 11:11:14 UTC
3.7-rc2 feedback:

well that issue is still not yet fixed, get this logged:

ACPI: Invalid Power Resource to register!
ACPI Warning: 0x000004b0-0x000004bf SystemIO conflicts with Region \_SB_.PCI0.SBRG.GPIO 1 (20120913/utaddress-251)
ACPI: If an ACPI driver is available for this device, you should use it instead of the native driver
ACPI Warning: 0x00000480-0x000004af SystemIO conflicts with Region \_SB_.PCI0.SBRG.GPIO 1 (20120913/utaddress-251)
ACPI: If an ACPI driver is available for this device, you should use it instead of the native driver
lpc_ich: Resource conflict(s) found affecting gpio_ich
Comment 29 Jean Delvare 2012-10-22 11:37:29 UTC
Please please please, stop reopening this bug. It is FIXED.

The log messages say that a resource conflict exists on your machine. This isn't an error, there's nothing to fix.
Comment 31 HacKurx 2014-06-12 19:10:04 UTC
*** Bug 77371 has been marked as a duplicate of this bug. ***

Note You need to log in before you can comment on or make changes to this bug.